--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^4.0.0",
+    "@fontsource-variable/playfair-display": "^5.0.9",
+    "@fontsource-variable/public-sans": "^5.0.9",
     "@types/canvas-confetti": "^1.6.0",
     "astro": "^2.10.3",
     "autoprefixer": "^10.4.14",
     "canvas-confetti": "^1.6.0",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.3"
   }
 }
