--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource-variable/public-sans": "^5.0.9",
     "@types/canvas-confetti": "^1.6.0",
     "astro": "^2.10.3",
+    "astro-seo": "^0.7.5",
     "autoprefixer": "^10.4.14",
     "canvas-confetti": "^1.6.0",
     "postcss": "^8.4.24",
